<resources>
    <string name="app_name">WhatsInYourFridge</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="shopping">Shopping</string>
    <string name="calendar">Calendar</string>
    <string name="favorites">Favorites</string>
    <string name="searchImage">search_icone</string>
    <string name="deleteButton">DELETE SELECTED</string>
    <string name="selectButton">SELECT ALL</string>
    <string name="addButton">+</string>
    <string name="searchHint">ingredient</string>
    <string name="textviewAddSL">ADD TO SHOPPING LIST</string>
    <string name="addToShoppingList">ADD TO SHOPPING LIST</string>
    <string name="deleteIngredient">X</string>
    <string name="shareButton">SHARE</string>
    <string name="settingsButton">SETTINGS</string>
    <string name="send">SHARE SHOPPING LIST BY..</string>
    <string name="theme">THEMES</string>
    <string name="themeHint">Veuillez sélectionner un thème :</string>
    <string name="theme1">Default</string>
    <string name="theme2">Black</string>
    <string name="theme3">Red</string>
    <string name="theme4">Default</string>
    <string name="hint">WhatsInYourFridge helps you find recipes by ingredients or recipe\'s name</string>
    <string name="addShopping">Add to   shopping list</string>
    <string name="addCalendar">Add to calendar</string>
    <string name="Search">Search</string>
    <string name="byIngredient">By ingredient</string>
    <string name="byRecipe">By recipe</string>
    <string name="shoppingList">Shopping List</string>
    <string name="noData">Sorry, there is no ingredients in your shopping list</string>
</resources>
