<?xml version="1.0" encoding="utf-8"?>

<!--<ScrollView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/scrollView"-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android">-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dore.view1.MainActivityView1"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingLeft="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:id="@+id/imageView"
            android:src="@mipmap/i_logo" />

        <TextView
            android:layout_width="337dp"
            android:layout_height="60dp"
            android:text="@string/hint"
            android:singleLine="false"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/imageView4"
            android:src="@mipmap/search_bar"
            android:layout_marginTop="10dp" />

        <AutoCompleteTextView
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:id="@+id/searchfield"
            android:hint=""
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="+"
            android:id="@+id/addButton"
            style="?android:attr/buttonStyleSmall"
            android:background="@color/colorApp"
            android:visibility="visible"
            android:textSize="30dp"
            android:layout_marginRight="5dp" />

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/byIngredient"
            android:clickable="true"
            android:checked="true"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:phoneNumber="false"
            android:id="@+id/ingredientRadio" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/byRecipe"
            android:id="@+id/recipeRadio"
            android:layout_weight="1"
            android:clickable="true"
            android:checked="false"
            android:layout_gravity="right" />
    </RadioGroup>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutFrame"
        android:visibility="visible"
        android:alwaysDrawnWithCache="false"
        android:animateLayoutChanges="false"
        android:animationCache="false"
        android:baselineAligned="false"
        android:duplicateParentState="false"
        android:layout_marginTop="15dp"
        android:keepScreenOn="false"
        android:textAlignment="gravity"
        android:background="@drawable/big_back">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/ingrView1"
                android:gravity="center"
                android:visibility="invisible" />

            <Button
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:text="x"
                android:id="@+id/delButton1"
                android:textColor="#e41b1b"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:clipToPadding="false"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/ingrView2"
                android:gravity="center"
                android:visibility="invisible" />

            <Button
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:text="x"
                android:id="@+id/delButton2"
                android:textColor="#e41b1b"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/ingrView3"
                android:gravity="center"
                android:visibility="invisible" />

            <Button
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:text="x"
                android:id="@+id/delButton3"
                android:textColor="#e41b1b"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/layoutSearchButton">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="search"
            android:id="@+id/searchButton"
            android:layout_gravity="center_horizontal"
            android:layout_row="16"
            android:layout_column="1"
            android:gravity="center_horizontal"
            android:allowUndo="false"
            android:background="@color/colorApp"
            android:paddingTop="15dp" />
    </LinearLayout>

</LinearLayout>
    <!--</ScrollView>-->
